Revamp README.md for comprehensive Java learning resource, enhancing structure, content, and clarity